add google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -40,3 +40,6 @@ links:
 
 # exclude my node related stuff
 exclude: ['package.json', 'src', 'node_modules']
+
+# Google services
+google_analytics: "UA-101125285-1"
